--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,72 @@
-body{background: red;
-	font-family: 'Diplomata SC', cursive;
-}
-.contenido h2 {
-     font-size: 15px;
-     color:#757575;
+
+
+body {
+     background-image: url(http://img15.deviantart.net/a525/i/2015/064/1/a/kiki_s_delivery_service___outside_the_bakery_by_starsdew-d8kj9jz.jpg);
+ 
+     position: relative; 
+     font:  15px/1.55 arial, helvetica, sans-serif;
+     color: #FFB8B8 ;
+     font-size: 20px;
+     font-weight: 20px;
+     margin: 0px 0px 0px 0px;
+
+     }
+
+    h1 {
+
+       color: #F6706F;
+       text-align:center;
+       font-size: 40px;
+       font-weight: 40px, bold;
+
+    }
+
+  #menu{
+
+         color: #F7A7C3 ; 
+         display: inline-block;
+         float: left;
+         width: 100px;
+         height: 800px;
+         margin-left: 10px;
+         text-align: center;
+         background: #E9967A;
+         border: 10px solid #fff;
+        padding: 5%;
+         }
+
+ #contenido1{
+             color: #F7A7C3;
+             display: inline-flex;
+             float: left;
+             width: auto;
+             margin:auto;
+             background-color: #E9967A;
+             border: 5px solid #fff;
+             padding: 1em 3em;
+             
+  }     
+ 
+#contenido2{
+             color: #F7A7C3;
+             display: inline-flex;
+             float: left;
+             width: auto;
+             margin:auto;
+             background-color: #E9967A;
+             border: 5px solid #fff;
+             padding: 1em 3em;
+            
+    }
+
+
+.formulario {
+
+            color: #fff
+            width: 50px;
+            height: 50px;
+            border:10px, solid grey;
+
+
 
 }
-
-.dark-primary-color    { background: #D32F2F; }
-.default-primary-color { background: #F44336; }
-.light-primary-color   { background: #FFCDD2; }
-.text-primary-color    { color: #FFFFFF; }
-.accent-color          { background: #FFC107; }
-.primary-text-color    { color: #212121; }
-.secondary-text-color  { color: #757575; }
-.divider-color         { border-color: #BDBDBD; }
